# Ass1

./: CMakeLists.txt  makefile
Include/: Action.h  Json.h  Session.h  User.h  Watchable.h  config1.Json  config2.Json
Incude/: Action.h  User.h
src/: Action.cpp  Session.cpp  User.cpp  Watchable.cpp  main.cpp
